# lw.OpenCVDNN.PPOCR

./: .gitattributes  .gitignore  CHANGELOG.md  DISTRIBUTION.md  README.md  README_zh.md  THIRD_PARTY_NOTICES.md
docs/: DEPLOYMENT.md  DEPLOYMENT_X86.md  SDK_INTEGRATION.md
examples/csharp-console/: LwPPOCRNet35.csproj  PPOCRNative.cs  Program.cs
examples/csharp-winforms/: App.config  MainForm.Designer.cs  MainForm.cs  NativeOcr.cs  OcrResult.cs  Program.cs  lw.OpenCVDNN.PPOCR.Win7.Test.csproj
examples/csharp-winforms/Properties/: AssemblyInfo.cs
include/: ppocr_api.h
licenses/: README.md  nlohmann-json-MIT.txt
server/: CMakeLists.txt  README.md  lw.OpenCVDNN.PPOCR.HttpServer.rc  main.cpp  resource.h
server/deploy/: install_service.bat  uninstall_service.bat
server/projects/: lw.OpenCVDNN.PPOCR.HttpServer.vcxproj
server/src/: json.cpp
server/www/: index.html
